# ruffle-vita

./: .gitmodules  Cargo.toml
desktopgles/: Cargo.toml
desktopgles/src/: main.rs
frontend-utils/: Cargo.toml
render/gles2/: Cargo.toml
render/gles2/shaders/: bitmap.frag  color.vert  gradient.frag
render/gles2/src/: lib.rs
render/gxm/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
render/gxm/lib/: librazorcapture_es4.suprx  razor.yaml
render/gxm/shaders/: bitmap_f.cg  clear_f.cg  clear_v.cg  color_f.cg  color_v.cg  gradient_f.cg  texture_v.cg
render/gxm/shaders/compiled/: bitmap_f.gxp  clear_f.gxp  clear_v.gxp  color_f.gxp  color_v.gxp  gradient_f.gxp  texture_v.gxp
render/gxm/src/: gxm.rs  lib.rs  macros.rs
vita/: Cargo.toml
vita/src/: audio.rs  egl.rs  main.rs  main_gles.rs  pvr.rs
