[package]
name = "ruffle_desktopgles"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
ruffle_render = { path = "../render" }
ruffle_render_gles2 = { path = "../render/gles2" }
ruffle_video_software = { path = "../video/software" }
ruffle_frontend_utils = { path = "../frontend-utils", features = ["cpal"] }
ruffle_core = { path = "../core", features = ["audio", "clap", "mp3", "aac", "nellymoser", "default_compatibility_rules"] }
gl = "0.14.0"
beryllium = "0.13.3"
