[package]
name = "ruffle_render_gles2"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
log = { workspace = true }
ruffle_render = { path = "..", features = ["tessellator"] }
bytemuck = { workspace = true, features = ["derive"] }
swf = { path = "../../swf" }
thiserror = { workspace = true }
gl = "0.14.0"
