[package]
name = "ruffle_render_gxm"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
log = { workspace = true }
ruffle_render = { path = "..", features = ["tessellator"] }
bytemuck = { workspace = true, features = ["derive"] }
swf = { path = "../../swf" }
thiserror = { workspace = true }
vitasdk-sys = { version = "0.3.3", features = ["SceGxm_stub", "SceDisplay_stub", "SceSysmem_stub", "SceSysmodule_stub"] }
rlsf = "0.2.1"
embedded-graphics = "0.8.1"
bytesize = "1.3.0"

[build]
target = "armv7-sony-vita-newlibeabihf"
